--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,24 +1,24 @@
-@import url(Fruits.css);
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
-
 @font-face {
-    font-family: "dosis";
-    src: url("/fonts/Dosis/static/Dosis-Regular.ttf");
+    font-family: 'dosis';
+    src: url('/fonts/Dosis/static/Dosis-Regular.ttf');
     font-display: swap;
 }
 
-
 @font-face {
-    font-family: "delius";
-    src: url("/fonts/Delius/Delius-Regular.ttf");
+    font-family: 'delius';
+    src: url('/fonts/Delius/Delius-Regular.ttf');
     font-display: swap;
-
 }
 
 @theme {
     --font-delius: 'delius';
     --font-dosis: 'dosis';
+}
+
+:root {
+    --header-height: 7rem;
 }
