--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -22,3 +22,13 @@
         font-display: swap;
     }
 }
+
+@layer components {
+    .apps-row    {
+        background-color: gray;
+        display: grid;
+        grid-template-columns: repeat(4, 1fr);
+        row-gap: 0.7rem;
+        justify-content: center;
+    }
+}
